# diff-parser

./: .gitignore  README.md  __init__.py  pyproject.toml
src/diff_parser/: __init__.py
test/: diff_test.py
