[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "diff-parser"
description = "Parse a `git diff` data or `.diff` file. Access a list of properties including filenames, filepath, source-hash, target-hash and more for every file changed."
version = "1.0"
requires-python = ">= 3.6"
authors = [{name = "Shaik Abdus Samad", email = "shaiksamad.dev@gmail.com"},]
license = {file = "LICENSE"}
readme="README.md"
keywords = ["diff", "file differences", "diff parser", "diffparser", "diff file", "git diff"]

classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]


[project.urls]
Homepage = "https://github.com/shaiksamad/diff-parser.git"
Repository = "https://github.com/shaiksamad/diff-parser.git"
Issues = "https://github.com/shaiksamad/diff-parser/issues"

